--- a/pc/UI_ADHPCcM02-2.html
+++ b/pc/UI_ADHPCcM02-2.html
@@ -2,7 +2,7 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
-        <title>점프업 - 상담이력_목록있음</title>
+        <title>점프업 - 상담이력_목록없음</title>
         <script src="../pc/include/js/head.js"></script>
         <script src="../pc/js/jquery-3.7.1.min.js"></script>
 
@@ -84,9 +84,6 @@
                                         </div>
                                     </div>
                                 </div>
-                                
-
-                                
                             </div>
                             <!-- 콘텐츠영역 끝 -->
 
