--- a/pc/UI_ADHPCfS02.html
+++ b/pc/UI_ADHPCfS02.html
@@ -227,7 +227,7 @@
                                                                 <div class="box_table_group">
                                                                     <div class="cell">
                                                                         <span class="box_ipt new_ipt">
-                                                                            <input type="text" id="" class="input_txt" title="대학교 명" readonly="" placeholder="">
+                                                                            <input type="text" id="" class="input_txt" title="대학교 명" readonly="" placeholder="" disabled>
                                                                             <button type="reset" class="newbtn_del ico16_delete"><span class="blind">삭제</span></button>
                                                                         </span>
                                                                     </div>
@@ -259,7 +259,7 @@
                                                             <td class="td_hopejob">
                                                                 <span class="box_ipt new_ipt">
                                                                     <label for="hopejob" class="sr_only">운영대학 검색</label>
-                                                                    <input type="text" class="input_txt" id="hopejob" name="hopejob" placeholder="희망직업을 입력하세요." title="희망직업 입력">
+                                                                    <input type="text" class="input_txt" id="hopejob" name="hopejob" placeholder="" title="희망직업 입력">
                                                                     <button type="button" class="newbtn_del ico16_delete" aria-label="희망직업 입력 삭제">
                                                                         <span class="blind">삭제</span>
                                                                     </button>
@@ -276,7 +276,7 @@
                                                             <td class="td_hopepay">
                                                                 <span class="box_ipt new_ipt">
                                                                     <label for="hopepay" class="sr_only">운영대학 검색</label>
-                                                                    <input type="text" class="input_txt" id="hopepay" name="hopepay" placeholder="희망급여를 입력하세요." title="희망급여 입력">
+                                                                    <input type="text" class="input_txt" id="hopepay" name="hopepay" placeholder="" title="희망급여 입력">
                                                                     <button type="button" class="newbtn_del ico16_delete" aria-label="희망급여 입력 삭제">
                                                                         <span class="blind">삭제</span>
                                                                     </button>
@@ -315,7 +315,7 @@
                                                                             <div class="box_table_group">
                                                                                 <div class="cell">
                                                                                     <span class="box_ipt new_ipt">
-                                                                                        <input type="text" id="tgregion" class="input_txt" title="기타지역명" readonly="" placeholder="">
+                                                                                        <input type="text" id="tgregion" class="input_txt" title="기타지역명" readonly="" placeholder="" disabled>
                                                                                         <button type="reset" class="newbtn_del ico16_delete"><span class="blind">삭제</span></button>
                                                                                     </span>
                                                                                 </div>
@@ -377,7 +377,7 @@
                                                                             <div class="box_table_group">
                                                                                 <div class="cell">
                                                                                     <span class="box_ipt new_ipt">
-                                                                                        <input type="text" id="tgcomapny" class="input_txt" title="목표기업군명" readonly="" placeholder="">
+                                                                                        <input type="text" id="tgcomapny" class="input_txt" title="목표기업군명" readonly="" placeholder="" disabled>
                                                                                         <button type="reset" class="newbtn_del ico16_delete"><span class="blind">삭제</span></button>
                                                                                     </span>
                                                                                 </div>
@@ -549,7 +549,7 @@
                                                                     <div class="new_selectbox newsel_w240">
                                                                         <label for="targetday" class="sr_only">목표달성시기</label>
                                                                         <select id="targetday" name="targetday" title="목표달성시기 선택">
-                                                                            <option disabled="" selected="">목표달성시기 선택</option>
+                                                                            <option disabled="" selected="">선택</option>
                                                                             <option value="TEST">TEST</option>
                                                                             <option value="TEST">TEST</option>
                                                                         </select>
@@ -683,7 +683,7 @@
                                                                     <div class="new_selectbox newsel_w240">
                                                                         <label for="targetday" class="sr_only">목표달성시기</label>
                                                                         <select id="targetday" name="targetday" title="목표달성시기 선택">
-                                                                            <option disabled="" selected="">목표달성시기 선택</option>
+                                                                            <option disabled="" selected="">선택</option>
                                                                             <option value="TEST">TEST</option>
                                                                             <option value="TEST">TEST</option>
                                                                         </select>
