--- a/pc/UI_ADHPCfS04.html
+++ b/pc/UI_ADHPCfS04.html
@@ -129,7 +129,7 @@
                                                                 </label>
                                                             </th>
                                                             <td>
-                                                                <fieldset class="box_radio_group flex_box type_unselect" role="radiogroup" aria-labelledby="participationLabel">
+                                                                <fieldset class="box_radio_group flex_box" disabled role="radiogroup" aria-labelledby="participationLabel">
                                                                     <legend id="participationLabel" class="sr_only">취업지원유형 선택</legend>                                                            
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="participationType1" name="participationType" value="">
@@ -424,15 +424,12 @@
                                                 </div>
                                             </div>
 
-
                                             <div class="iapplan_submit_wrap">
                                                 <div class="flex_box mt40 js_s">
                                                     <button type="button" class="btn big type02 btn_s_r" aria-label="목록" onclick="">목록</button>
                                                     <button type="button" id="returnBtn" class="btn big fill type01" onclick="">회수</button>
                                                 </div>
                                             </div>
-
-
                                         </div>
 
                                         <script>
