--- a/pc/UI_ADHPCfS05.html
+++ b/pc/UI_ADHPCfS05.html
@@ -141,7 +141,7 @@
                                                                 </label>
                                                             </th>
                                                             <td>
-                                                                <fieldset class="box_radio_group flex_box type_unselect" role="radiogroup" aria-labelledby="participationLabel">
+                                                                <fieldset class="box_radio_group flex_box" disabled role="radiogroup" aria-labelledby="participationLabel">
                                                                     <legend id="participationLabel" class="sr_only">취업지원유형 선택</legend>                                                            
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="participationType1" name="participationType" value="">
@@ -227,7 +227,7 @@
                                                                 <div class="box_table_group">
                                                                     <div class="cell">
                                                                         <span class="box_ipt new_ipt">
-                                                                            <input type="text" id="" class="input_txt" title="대학교 명" readonly="" placeholder="">
+                                                                            <input type="text" id="" class="input_txt" title="대학교 명" readonly="" placeholder="" disabled>
                                                                             <button type="reset" class="newbtn_del ico16_delete"><span class="blind">삭제</span></button>
                                                                         </span>
                                                                     </div>
@@ -377,7 +377,7 @@
                                                                             <div class="box_table_group">
                                                                                 <div class="cell">
                                                                                     <span class="box_ipt new_ipt">
-                                                                                        <input type="text" id="tgcomapny" class="input_txt" title="목표기업군명" readonly="" placeholder="" value="강소기업">
+                                                                                        <input type="text" id="tgcomapny" class="input_txt" title="목표기업군명" placeholder="" value="강소기업">
                                                                                         <button type="reset" class="newbtn_del ico16_delete"><span class="blind">삭제</span></button>
                                                                                     </span>
                                                                                 </div>
