--- a/pc/UI_ADHPCgM02.html
+++ b/pc/UI_ADHPCgM02.html
@@ -213,7 +213,7 @@
                                                             <td class="td_jointime">
                                                                 <span class="box_ipt new_ipt newipt_w120">
                                                                     <label for="jointime" class="sr_only">참여시간</label>
-                                                                    <input type="text" class="input_txt" id="jointime" name="jointime" placeholder="" title="참여시간 입력" value="10">
+                                                                    <input type="text" class="input_txt" id="jointime" name="jointime" placeholder="" title="참여시간 입력" value="">
                                                                     <button type="button" class="newbtn_del ico16_delete" aria-label="참여시간 입력 삭제">
                                                                         <span class="blind">삭제</span>
                                                                     </button>
