--- a/pc/UI_ADHPChM01_2.html
+++ b/pc/UI_ADHPChM01_2.html
@@ -135,8 +135,8 @@
                                             </div>
                                             <!-- table -->
                                             
-                                            <div class="notlist_inner mt40">
-                                                <figure><div class="icon"></div></figure>
+                                            <div class="notlist_inner ">
+                                                <div class="icon"></div>
                                                 <p>등록된 포인트 신청 내역이 없습니다.</p>
                                             </div>
                                         </div>
