--- a/index_univ.html
+++ b/index_univ.html
@@ -388,7 +388,7 @@
                     <td>취업준비도검사(점프업)</td>
                     <td>점프업 - 취업준비도검사_목록</td>
                     <td>UI_ADHPCeM01</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCeM01.html" target="_blank">PC</a>
@@ -403,7 +403,7 @@
                     <td>취업준비도검사(점프업)</td>
                     <td>점프업 - 취업준비도검사_ST1</td>
                     <td>UI_ADHPCeS02</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCeS02.html" target="_blank">PC</a>
@@ -418,7 +418,7 @@
                     <td>취업준비도검사(점프업)</td>
                     <td>점프업 - 취업준비도검사_ST2</td>
                     <td>UI_ADHPCeS03</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCeS03.html" target="_blank">PC</a>
@@ -433,7 +433,7 @@
                     <td>취업준비도검사(점프업)</td>
                     <td>점프업 - 취업준비도검사_ST3</td>
                     <td>UI_ADHPCeS04</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCeS04.html" target="_blank">PC</a>
@@ -448,7 +448,7 @@
                     <td>취업준비도검사(점프업)</td>
                     <td>점프업 - 취업준비도검사_ST4</td>
                     <td>UI_ADHPCeS05</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCeS05.html" target="_blank">PC</a>
@@ -463,7 +463,7 @@
                     <td>취업준비도검사(점프업)</td>
                     <td>점프업 - 취업준비도검사_ST5</td>
                     <td>UI_ADHPCeS06</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCeS06.html" target="_blank">PC</a>
@@ -478,7 +478,7 @@
                     <td>취업준비도검사(점프업)</td>
                     <td>점프업 - 취업준비도검사_조회</td>
                     <td>UI_ADHPCeS07</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCeS07.html" target="_blank">PC</a>
@@ -493,7 +493,7 @@
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP관리_목록</td>
                     <td>UI_ADHPCfM01</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCfM01_1.html" target="_blank">PC-1</a>
@@ -511,7 +511,7 @@
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP관리_등록</td>
                     <td>UI_ADHPCfS02</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCfS02.html" target="_blank">PC</a>
@@ -526,7 +526,7 @@
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP관리_조회/수정(저장)</td>
                     <td>UI_ADHPCfS03</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCfS03.html" target="_blank">PC</a>
@@ -541,7 +541,7 @@
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP관리_조회(제출)</td>
                     <td>UI_ADHPCfS04</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCfS04.html" target="_blank">PC</a>
@@ -556,7 +556,7 @@
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP관리_수정(보완요청_제출후)</td>
                     <td>UI_ADHPCfS05</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCfS05.html" target="_blank">PC</a>
@@ -571,7 +571,7 @@
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP관리_수정(변경신청_승인후)</td>
                     <td>UI_ADHPCfS06</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCfS06.html" target="_blank">PC</a>
@@ -586,7 +586,7 @@
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP관리_조회(변경제출)</td>
                     <td>UI_ADHPCfS07</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCfS07.html" target="_blank">PC</a>
@@ -601,10 +601,11 @@
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP결과관리_목록</td>
                     <td>UI_ADHPCgM01</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPCgM01.html" target="_blank">PC</a>
+                        <a href="./pc/UI_ADHPCgM01-1.html" target="_blank">PC-1</a>
+                        <a href="./pc/UI_ADHPCgM01 -2.html" target="_blank">PC-2</a>
                     </td>
                 </tr>
                 <tr>
@@ -616,7 +617,7 @@
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP결과관리_등록(제출및저장전)</td>
                     <td>UI_ADHPCgM02</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCgM02.html" target="_blank">PC</a>
@@ -631,7 +632,7 @@
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP결과관리_수정(저장후제출전)</td>
                     <td>UI_ADHPCgM03</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCgM03.html" target="_blank">PC</a>
@@ -646,7 +647,7 @@
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP결과관리_조회(제출후)</td>
                     <td>UI_ADHPCgM04</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCgM04.html" target="_blank">PC</a>
@@ -661,7 +662,7 @@
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP결과관리_수정(보완요청_제출후)</td>
                     <td>UI_ADHPCgM05</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCgM05.html" target="_blank">PC</a>
@@ -676,7 +677,7 @@
                     <td>포인트신청관리(점프업)</td>
                     <td>점프업_포인트관리_목록</td>
                     <td>UI_ADHPChM01</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPChM01_1.html" target="_blank">PC-1</a>
@@ -695,7 +696,8 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPChS02.html" target="_blank">PC</a>
+                        <a href="./pc/UI_ADHPChS02-1.html" target="_blank">PC-1</a>
+                        <a href="./pc/UI_ADHPChS02-2.html" target="_blank">PC-2</a>
                     </td>
                 </tr>
                 <tr>
