--- a/index_univ.html
+++ b/index_univ.html
@@ -193,6 +193,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCbS07.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCbS07.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -208,6 +209,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCbS08.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCbS08.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -223,6 +225,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCbM09.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCbM09.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -239,6 +242,7 @@
                     <td>                   
                         <a href="./pc/UI_ADHPCcM01-1.html" target="_blank">PC-1</a>
                         <a href="./pc/UI_ADHPCcM01-2.html" target="_blank">PC-2</a>
+                        <a href="./mobile/UI_ADHPCcM01.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
