--- a/pc/UI_ADHPChS05.html
+++ b/pc/UI_ADHPChS05.html
@@ -743,6 +743,7 @@
                                         <div class="flex_box mt40 js_s">
                                             <button type="button" class="btn big type02 btn_s_r" aria-label="목록" onclick="">목록</button>
                                             <div class="flex_gap16">
+                                                <button type="button" id="deleteBtn" class="btn big type02" onclick="">삭제</button>
                                                 <button type="button" id="saveBtn" class="btn big type01" onclick="">저장</button>
                                                 <button type="submit" id="submitBtn" class="btn big fill type01" onclick="">제출</button>
                                             </div>
