--- a/pc/UI_ADHPChS06-2.html
+++ b/pc/UI_ADHPChS06-2.html
@@ -130,7 +130,7 @@
                                                         <tr>
                                                             <th scope="row">취업지원유형</th>
                                                             <td>
-                                                                <fieldset class="box_radio_group flex_box type_unselect" role="radiogroup" aria-labelledby="participationLabel">
+                                                                <fieldset class="box_radio_group flex_box" disabled role="radiogroup" aria-labelledby="participationLabel">
                                                                     <legend id="participationLabel" class="sr_only">취업지원유형 선택</legend>                                                            
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="participationType1" name="participationType" value="" checked>
@@ -448,7 +448,7 @@
                                                         <tr>
                                                             <th scope="row">국민취업지원제도 구직촉진수당 수령여부</th>
                                                             <td>
-                                                                <fieldset class="box_radio_group radio_focus_group type_unselect" role="radiogroup" aria-labelledby="jobseekLabel1">
+                                                                <fieldset class="box_radio_group radio_focus_group" disabled role="radiogroup" aria-labelledby="jobseekLabel1">
                                                                     <legend id="jobseekLabel1" class="sr_only">국민취업지원제도 구직촉진수당 수령여부 선택</legend>                                                            
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="jobseek_yes" name="jobseek" value="yes" checked>
@@ -472,7 +472,7 @@
                                                         <tr>
                                                             <th scope="row">국민취업지원제도 일경험프로그램 수당 수령여부</th>
                                                             <td>
-                                                                <fieldset class="box_radio_group radio_focus_group type_unselect" role="radiogroup" aria-labelledby="allowanceLabel1">
+                                                                <fieldset class="box_radio_group radio_focus_group" disabled role="radiogroup" aria-labelledby="allowanceLabel1">
                                                                     <legend id="allowanceLabel1" class="sr_only">국민취업지원제도 일경험프로그램 수당 수령여부 선택</legend>                                                            
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="allowance_yes" name="allowance" value="yes" checked>
@@ -496,7 +496,7 @@
                                                         <tr>
                                                             <th scope="row">미래내일 일경험사업 지원금 수령여부</th>
                                                             <td>
-                                                                <fieldset class="box_radio_group radio_focus_group type_unselect" role="radiogroup" aria-labelledby="subsidyLabel1">
+                                                                <fieldset class="box_radio_group radio_focus_group" disabled role="radiogroup" aria-labelledby="subsidyLabel1">
                                                                     <legend id="subsidyLabel1" class="sr_only">미래내일 일경험사업 지원금 수령여부 선택</legend>                                                            
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="subsidy1_yes" name="subsidy1" value="yes" checked>
@@ -520,7 +520,7 @@
                                                         <tr>
                                                             <th scope="row">내일배움카드 훈련장려금 <span class="txt_regular">(K-디지털 트레이닝 포함)</span> 수령여부</th>
                                                             <td>
-                                                                <fieldset class="box_radio_group radio_focus_group type_unselect" role="radiogroup" aria-labelledby="subsidyLabel2">
+                                                                <fieldset class="box_radio_group radio_focus_group" disabled role="radiogroup" aria-labelledby="subsidyLabel2">
                                                                     <legend id="subsidyLabel2" class="sr_only">내일배움카드 훈련장려금 수령여부 선택</legend>                                                            
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="subsidy2_yes" name="subsidy2" value="yes" checked>
@@ -547,11 +547,11 @@
                                                                 <ul>
                                                                     <li>
                                                                         <label for="support_name">지원금명</label>
-                                                                        <input type="text" id="support_name" name="support_name" aria-required="false" value="TEST TEST TEST">
+                                                                        <input type="text" id="support_name" name="support_name" aria-required="false" value="TEST TEST TEST" disabled>
                                                                     </li>
                                                                     <li>
                                                                         <label for="support_amount">지원금액</label>
-                                                                        <input type="text" id="support_amount" name="support_amount" aria-required="false" value="1,000,000" class="money_amount">
+                                                                        <input type="text" id="support_amount" name="support_amount" aria-required="false" value="1,000,000" class="money_amount" disabled>
                                                                         <span aria-hidden="true">원</span>
                                                                     </li>
                                                                 </ul>
@@ -560,7 +560,7 @@
                                                         <tr>
                                                             <th scope="row">개인별 월(1일~말일) 20만원 초과여부</th>
                                                             <td>
-                                                                <fieldset class="box_radio_group flex_box type_unselect" role="radiogroup" aria-labelledby="existLabel">
+                                                                <fieldset class="box_radio_group flex_box" disabled role="radiogroup" aria-labelledby="existLabel">
                                                                     <legend id="existLabel" class="sr_only">개인별 월(1일~말일) 20만원 초과여부 선택</legend>                                                            
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="existType1" name="existType" value="" checked>
@@ -581,7 +581,7 @@
                                                         <tr>
                                                             <th scope="row">수당 누적 총액 100만원 초과여부</th>
                                                             <td>
-                                                                <fieldset class="box_radio_group flex_box type_unselect" role="radiogroup" aria-labelledby="accrueLabel">
+                                                                <fieldset class="box_radio_group flex_box" disabled role="radiogroup" aria-labelledby="accrueLabel">
                                                                     <legend id="accrueLabel" class="sr_only">수당 누적 총액 100만원 초과여부 선택</legend>                                                            
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="accrueType1" name="accrueType" value=""checked>
@@ -607,7 +607,7 @@
                                                                 </div>
                                                             </th>
                                                             <td>
-                                                                <fieldset class="box_radio_group flex_box type_unselect" role="radiogroup" aria-labelledby="agreeChkLabel">
+                                                                <fieldset class="box_radio_group flex_box" disabled role="radiogroup" aria-labelledby="agreeChkLabel">
                                                                     <legend id="agreeChkLabel" class="sr_only">참여수당 관련 부정수급 방지 확약서 동의 여부 선택</legend>                                                            
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="agreeChkType1" name="agreeChkType" value=""checked>
