--- a/pc/UI_ADHPChS07.html
+++ b/pc/UI_ADHPChS07.html
@@ -132,7 +132,7 @@
                                                         <tr>
                                                             <th scope="row">취업지원유형</th>
                                                             <td colspan="3"> 
-                                                                <fieldset class="box_radio_group flex_box type_unselect" role="radiogroup" aria-labelledby="participationLabel">
+                                                                <fieldset class="box_radio_group flex_box" disabled role="radiogroup" aria-labelledby="participationLabel">
                                                                     <legend id="participationLabel" class="sr_only">취업지원유형 선택</legend>                                                            
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="participationType1" name="participationType" value="">
@@ -623,7 +623,7 @@
                                                                         </label>
                                                                     </div>
                                                                     <div class="radio_input_item">
-                                                                        <input class="focus_on money_amount" type="text" class="yes_input" id="yesInput1" name="yesInput1" disabled aria-disabled="true" inputmode="numeric" value="1,000,000">
+                                                                        <input class="focus_on money_amount" type="text" class="yes_input" id="yesInput1" name="yesInput1" aria-disabled="true" inputmode="numeric" value="1,000,000">
                                                                         <span>원</span>
                                                                     </div>
                                                                     <div class="new_radio_item">
@@ -647,7 +647,7 @@
                                                                         </label>
                                                                     </div>
                                                                     <div class="radio_input_item">
-                                                                        <input class="focus_on money_amount" type="text" class="yes_input" id="yesInput2" name="yesInput2" disabled aria-disabled="true" inputmode="numeric" value="1,000,000">
+                                                                        <input class="focus_on money_amount" type="text" class="yes_input" id="yesInput2" name="yesInput2" aria-disabled="true" inputmode="numeric" value="1,000,000">
                                                                         <span>원</span>
                                                                     </div>
                                                                     <div class="new_radio_item">
