--- a/pc/UI_ADHPChS08.html
+++ b/pc/UI_ADHPChS08.html
@@ -254,7 +254,7 @@
                                                         <tr>
                                                             <th scope="row">취업지원유형</th>
                                                             <td colspan="3"> 
-                                                                <fieldset class="box_radio_group flex_box type_unselect" role="radiogroup" aria-labelledby="participationLabel">
+                                                                <fieldset class="box_radio_group flex_box" disabled role="radiogroup" aria-labelledby="participationLabel">
                                                                     <legend id="participationLabel" class="sr_only">취업지원유형 선택</legend>                                                            
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="participationType1" name="participationType" value="">
@@ -531,10 +531,17 @@
                                             <ul class="ul_iap_addlist mt24" id="fileList">
                                                 <li class="att_li">
                                                     <p>파일명.pdf</p>
+                                                    <a href="#" download="" class="att_down_btn"><span class="sr_only">첨부파일 다운</span></a>
+                                                    <button type="button" class="att_del_btn"><span class="sr_only">첨부파일 삭제</span></button>
+                                                </li>
+                                                <li class="att_li">
+                                                    <p>파일명 파일명 파일명 파일명2222222222222.pdf</p>
+                                                    <a href="#" download="" class="att_down_btn"><span class="sr_only">첨부파일 다운</span></a>
                                                     <button type="button" class="att_del_btn"><span class="sr_only">첨부파일 삭제</span></button>
                                                 </li>
                                                 <li class="att_li">
                                                     <p>파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명.pdf</p>
+                                                    <a href="#" download="" class="att_down_btn"><span class="sr_only">첨부파일 다운</span></a>
                                                     <button type="button" class="att_del_btn"><span class="sr_only">첨부파일 삭제</span></button>
                                                 </li>
                                             </ul>
@@ -581,7 +588,7 @@
                                                         <tr>
                                                             <th scope="row">미래내일 일경험사업 지원금 수령여부</th>
                                                             <td>
-                                                                <fieldset class="box_radio_group radio_focus_group type_unselect" role="radiogroup" aria-labelledby="subsidyLabel1">
+                                                                <fieldset class="box_radio_group radio_focus_group" disabled role="radiogroup" aria-labelledby="subsidyLabel1">
                                                                     <legend id="subsidyLabel1" class="sr_only">미래내일 일경험사업 지원금 수령여부 선택</legend>                                                            
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="subsidy1_yes" name="subsidy1" value="yes" checked>
@@ -605,7 +612,7 @@
                                                         <tr>
                                                             <th scope="row">내일배움카드 훈련장려금 <span class="txt_regular">(K-디지털 트레이닝 포함)</span> 수령여부</th>
                                                             <td>
-                                                                <fieldset class="box_radio_group radio_focus_group type_unselect" role="radiogroup" aria-labelledby="subsidyLabel2">
+                                                                <fieldset class="box_radio_group radio_focus_group" disabled role="radiogroup" aria-labelledby="subsidyLabel2">
                                                                     <legend id="subsidyLabel2" class="sr_only">내일배움카드 훈련장려금 수령여부 선택</legend>                                                            
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="subsidy2_yes" name="subsidy2" value="yes" checked>
@@ -632,11 +639,11 @@
                                                                 <ul>
                                                                     <li>
                                                                         <label for="support_name">지원금명</label>
-                                                                        <input type="text" id="support_name" name="support_name" aria-required="false" value="TEST TEST TEST">
+                                                                        <input type="text" id="support_name" name="support_name" aria-required="false" value="TEST TEST TEST" disabled>
                                                                     </li>
                                                                     <li>
                                                                         <label for="support_amount">지원금액</label>
-                                                                        <input type="text" id="support_amount" name="support_amount" aria-required="false" value="1,000,000" class="money_amount">
+                                                                        <input type="text" id="support_amount" name="support_amount" aria-required="false" value="1,000,000" class="money_amount" disabled>
                                                                         <span aria-hidden="true">원</span>
                                                                     </li>
                                                                 </ul>
@@ -645,7 +652,7 @@
                                                         <tr>
                                                             <th scope="row">개인별 월(1일~말일) 20만원 초과여부</th>
                                                             <td>
-                                                                <fieldset class="box_radio_group flex_box type_unselect" role="radiogroup" aria-labelledby="existLabel">
+                                                                <fieldset class="box_radio_group flex_box" disabled role="radiogroup" aria-labelledby="existLabel">
                                                                     <legend id="existLabel" class="sr_only">개인별 월(1일~말일) 20만원 초과여부 선택</legend>                                                            
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="existType1" name="existType" value="" checked>
@@ -666,7 +673,7 @@
                                                         <tr>
                                                             <th scope="row">수당 누적 총액 100만원 초과여부</th>
                                                             <td>
-                                                                <fieldset class="box_radio_group flex_box type_unselect" role="radiogroup" aria-labelledby="accrueLabel">
+                                                                <fieldset class="box_radio_group flex_box" disabled role="radiogroup" aria-labelledby="accrueLabel">
                                                                     <legend id="accrueLabel" class="sr_only">수당 누적 총액 100만원 초과여부 선택</legend>                                                            
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="accrueType1" name="accrueType" value=""checked>
@@ -692,7 +699,7 @@
                                                                 </div>
                                                             </th>
                                                             <td>
-                                                                <fieldset class="box_radio_group flex_box type_unselect" role="radiogroup" aria-labelledby="agreeChkLabel">
+                                                                <fieldset class="box_radio_group flex_box" disabled role="radiogroup" aria-labelledby="agreeChkLabel">
                                                                     <legend id="agreeChkLabel" class="sr_only">참여수당 관련 부정수급 방지 확약서 동의 여부 선택</legend>                                                            
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="agreeChkType1" name="agreeChkType" value=""checked>
