--- a/index_univ.html
+++ b/index_univ.html
@@ -697,7 +697,7 @@
                     <td>포인트신청관리(점프업)</td>
                     <td>점프업_포인트관리_신청(등록)</td>
                     <td>UI_ADHPChS02</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPChS02-1.html" target="_blank">PC-1</a>
@@ -728,7 +728,7 @@
                     <td>포인트신청관리(점프업)</td>
                     <td>부정수급 방지 확인서</td>
                     <td>UI_ADHPChS04</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPChS04.html" target="_blank">PC</a>
@@ -743,7 +743,7 @@
                     <td>포인트신청관리(점프업)</td>
                     <td>포인트관리_수정(저장후제출전)</td>
                     <td>UI_ADHPChS05</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPChS05.html" target="_blank">PC</a>
@@ -758,7 +758,7 @@
                     <td>포인트신청관리(점프업)</td>
                     <td>포인트관리_조회(제출후)</td>
                     <td>UI_ADHPChS06</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPChS06-1.html" target="_blank">PC-1</a>
@@ -774,7 +774,7 @@
                     <td>포인트신청관리(점프업)</td>
                     <td>포인트관리_조회(보완요청)</td>
                     <td>UI_ADHPChS07</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPChS07.html" target="_blank">PC</a>
@@ -789,7 +789,7 @@
                     <td>포인트신청관리(점프업)</td>
                     <td>포인트관리_조회(승인, 미지급, 환급)</td>
                     <td>UI_ADHPChS08</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPChS08.html" target="_blank">PC</a>
